Updated non-jakartified dependencies to work in java 11 and removed some old ignored stuff related to tomcat